--- a/css/vote-header.scss
+++ b/css/vote-header.scss
@@ -7,12 +7,36 @@
     z-index: 2;
     background: linear-gradient(to right, rgba(3,169,239,0.5) 0%,rgba(3,169,239,.1) 100%);
 
+    &__left {
+        width: 50%;
+        display: flex;
+        align-items:center;
+        height: 40px;
+        position: relative;
+
+        &--black {
+            background-color: #000000;
+        }
+    }
+
+    &__right {
+        width: 50%;
+        display: flex;
+        align-items:center;
+        height: 40px;
+        position: relative;
+
+        &--black {
+            background-color: #000000;
+        }
+    }
+
     &__left-bg {
         width: 200px;
         height: 40px;
         z-index: 1;
         position: absolute;
-        left: 0;
+        right: -30px;
         top: 0;
 
         svg {
@@ -25,7 +49,7 @@
         height: 40px;
         z-index: 1;
         position: absolute;
-        right: 0;
+        left:-30px;
         top: 0;
 
         svg {
@@ -34,9 +58,10 @@
     }
 
     &__logo {
-        margin: 4px 0px 0px 32px;
+        margin: 4px 8px 0px 32px;
         flex: 1;
         z-index: 1;
+        text-align: right;
 
         svg {
             width: 24px;
