--- a/css/vote-header.scss
+++ b/css/vote-header.scss
@@ -66,6 +66,11 @@
         svg {
             width: 24px;
         }
+
+        @media screen and (min-width: 1024px) {
+            flex: 0;
+            margin-left:24px;
+        }
     }
 
     &__title, &__cash{
@@ -115,6 +120,12 @@
 
         &--blue {
             color: #4f8b9e;
+        }
+
+        @media screen and (min-width: 1024px) {
+            flex: 0;
+            word-break: normal;
+            margin-right: 24px;
         }
     }
 }
