--- a/css/vote-ratings-item.scss
+++ b/css/vote-ratings-item.scss
@@ -17,6 +17,10 @@
         flex: 1;
         margin-right:12px;
         display: flex;
+
+        @media screen and (min-width: 1024px) {
+            flex: 0;
+        }
     }
 
     &__details {
@@ -66,6 +70,10 @@
 
         &--blue {
             color: #4cbbde;
+        }
+
+        @media screen and (min-width: 1024px) {
+            flex: 0;
         }
     }
 
